--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div id="container">
     <div class="logo-container">
       <img src="/images/logo.svg" alt="Proffy">
-      <h2>Sua plataforma de estudos online</h2>
+      <h2>Sua plataforma de estudos online.</h2>
     </div>
 
     <img class=people-image src="/images/landing.svg" alt="">
