--- a/study.html
+++ b/study.html
@@ -64,6 +64,57 @@
         </form>
       </div>
     </header>
+
+    <main>
+      <article class="teacher-item">
+        <header>
+          <img
+            src="https://avatars0.githubusercontent.com/u/63071834?s=460&u=0730fded6f6b5b22c5f3dfeb4b24fc42c4c19c0a&v=4"
+            alt="Fernando Butzke">
+          <div>
+            <strong>Fernando Butzke</strong>
+            <span>Educação Física</span>
+          </div>
+        </header>
+
+        <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório
+          e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas
+          explosões.</p>
+
+        <footer>
+          <p>Preço/hora<strong>R$ 20,00</strong>
+          </p>
+          <button type="button">
+            <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+          </button>
+        </footer>
+      </article>
+
+
+      <article class="teacher-item">
+        <header>
+          <img
+            src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4"
+            alt="Diego Fernandes">
+          <div>
+            <strong>Diego Fernandes</strong>
+            <span>Química</span>
+          </div>
+        </header>
+
+        <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório
+          e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas
+          explosões.</p>
+
+        <footer>
+          <p>Preço/hora<strong>R$ 20,00</strong>
+          </p>
+          <button type="button">
+            <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+          </button>
+        </footer>
+      </article>
+    </main>
   </div>
 
 </body>
