--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#8257E5">
+
   <title>Proffy | Sua plataforma de estudos online</title>
+
+  <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/partials/page-landing.css">
@@ -53,7 +57,7 @@
       </a>
       <a class="give-classes" href="/give-classes.html">
         <img src="/images/icons/give-classes.svg" alt="Dar aulas">
-        Dar aulas
+        Ensinar
       </a>
     </div>
 
