--- a/give-classes.html
+++ b/give-classes.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/partials/header.css">
+  <link rel="stylesheet" href="/styles/partials/forms.css">
   <link rel="stylesheet" href="/styles/partials/page-give-classes.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
@@ -47,12 +48,107 @@
             <label for="whatsapp">Whatsapp <small>(somente números)</small></label>
             <input name="whatsapp" id="whatsapp" type="number" required>
           </div>
-          <div class="input-block">
+          <div class="textarea-block">
             <label for="bio">Biografia</label>
             <textarea name="bio" id="bio" required></textarea>
           </div>
         </fieldset>
+
+
+        <fieldset>
+          <legend>Sobre a aula</legend>
+          <div class="select-block">
+            <label for="subject"> Matéria</label>
+            <select name="subject" id="subject" required>
+              <option value="">Selecione uma opção</option>
+              <option value="1">Artes</option>
+              <option value="2">Biologia</option>
+              <option value="3">Ciências</option>
+              <option value="4">Educação Física</option>
+              <option value="5">Física</option>
+              <option value="6">Geografia</option>
+              <option value="7">História</option>
+              <option value="8">Matemática</option>
+              <option value="9">Português</option>
+              <option value="10">Química</option>
+            </select>
+          </div>
+
+          <div class="input-block">
+            <label for="cost">Custo da hora/aula
+              <small>(R$)</small>
+            </label>
+            <input type="cost" id="cost" type="number">
+          </div>
+        </fieldset>
+
+        <fieldset id="schedule-items">
+          <legend>Horários disponíveis
+            <button id="add-time"> + Novo Horário</button>
+          </legend>
+
+          <div class="schedule-item">
+            <div class="select-block">
+              <label for="weekday">Dia da semana</label>
+              <select name="weekday[]" required>
+                <option value="">Selecione uma opção</option>
+                <option value="0">Domingo</option>
+                <option value="1">Segunda-feira</option>
+                <option value="2">Terça-feira</option>
+                <option value="3">Quarta-feira</option>
+                <option value="4">Quinta-feira</option>
+                <option value="5">Sexta-feira</option>
+                <option value="6">Sábado</option>
+              </select>
+            </div>
+
+            <div class="input-block">
+              <label for="time_from">Das</label>
+              <input type="time" name="time_from[]" required> <!-- required = obrigatório -->
+            </div>
+
+            <div class="input-block">
+              <label for="time_to">Até</label>
+              <input type="time" name="time_to[]" required> <!-- required = obrigatório -->
+            </div>
+          </div>
+
+          <div class="schedule-item">
+            <div class="select-block">
+              <label for="weekday">Dia da semana</label>
+              <select name="weekday[]" required>
+                <option value="">Selecione uma opção</option>
+                <option value="0">Domingo</option>
+                <option value="1">Segunda-feira</option>
+                <option value="2">Terça-feira</option>
+                <option value="3">Quarta-feira</option>
+                <option value="4">Quinta-feira</option>
+                <option value="5">Sexta-feira</option>
+                <option value="6">Sábado</option>
+              </select>
+            </div>
+
+            <div class="input-block">
+              <label for="time_from">Das</label>
+              <input type="time" name="time_from[]" required> <!-- required = obrigatório -->
+            </div>
+
+            <div class="input-block">
+              <label for="time_to">Até</label>
+              <input type="time" name="time_to[]" required> <!-- required = obrigatório -->
+            </div>
+          </div>
+
+
+        </fieldset>
       </form>
+      <footer>
+        <p>
+          <img src="/images/icons/warning.svg" alt="Aviso">
+          Importante! <br> preencha todos os dados
+        </p>
+        <button type="submit" form="create-class">Salvar cadastro</button>
+      </footer>
     </main>
   </div>
 
