--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
+  <script src="/scripts/main.js"></script>
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/partials/page-landing.css">
   <link
