--- a/study.html
+++ b/study.html
@@ -8,6 +8,8 @@
 
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
+  <script src="/scripts/main.js"></script>
+
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/partials/header.css">
   <link rel="stylesheet" href="/styles/partials/forms.css">
